# open62541_ffi

./: README.md  config.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle  main.c  open62541.h  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/open62541_ffi/: Open62541FfiPlugin.java
android/src/test/java/com/example/open62541_ffi/: Open62541FfiPluginTest.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/open62541_ffi_example/: MainActivity.java
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: open62541_ffi.podspec
ios/Classes/: Open62541FfiPlugin.swift
lib/: open62541.dart  open62541_ffi.dart  open62541_ffi_method_channel.dart  open62541_ffi_platform_interface.dart
lib/cpp/: open62541.h
lib/src/: gen.dart  local.dart  ua_client.dart  ua_server.dart
lib/src/client_childen/: client_connect.dart  client_listen_variable.dart  client_method_call.dart  client_read_and_write_node_async.dart  client_read_and_write_nodeid.dart
lib/src/opject/: opc_node_id.dart  opc_qualifiedname.dart  opc_type.dart  opc_variant.dart  ua_argrument.dart  ua_convert.dart  ua_data_value.dart  ua_variable_attributes.dart
lib/src/server_chidren/: server_add_avarible_node.dart  server_add_listen.dart  server_add_method.dart  server_add_nodeid_object.dart  server_add_type_nodeid.dart  server_bind.dart
linux/: CMakeLists.txt  open62541_ffi_plugin.cc  open62541_ffi_plugin_private.h
linux/include/open62541_ffi/: open62541_ffi_plugin.h
linux/test/: open62541_ffi_plugin_test.cc
macos/: open62541_ffi.podspec
macos/Classes/: Open62541FfiPlugin.swift
src/linux/: custom.h
src/windows/: open62541.h
test/: open62541_ffi_method_channel_test.dart  open62541_ffi_test.dart
windows/: CMakeLists.txt  open62541_ffi_plugin.cpp  open62541_ffi_plugin.h  open62541_ffi_plugin_c_api.cpp
windows/include/open62541_ffi/: open62541_ffi_plugin_c_api.h
windows/test/: open62541_ffi_plugin_test.cpp
